Fix partner images display on mobile

--- a/components/partners/Partners.module.scss
+++ b/components/partners/Partners.module.scss
@@ -1,8 +1,16 @@
 .root {
 	display: flex;
 	align-items: center;
+
 	img {
 		max-width: 50%;
-		margin: auto 3.125rem;
+	}
+}
+
+@media (min-width: 1100px) {
+	.root {
+		img {
+			margin: auto 3.125rem;
+		}
 	}
 }
